After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684802 - gnome-xkb-info: Fix introspection element-type annotations
gnome-xkb-info: Fix introspection element-type annotations
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks: 678171
 
 
Reported: 2012-09-25 18:05 UTC by Rui Matos
Modified: 2012-09-25 19:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-xkb-info: Fix introspection element-type annotations (1.87 KB, patch)
2012-09-25 18:05 UTC, Rui Matos
reviewed Details | Review
like this ? (1.87 KB, patch)
2012-09-25 19:30 UTC, Matthias Clasen
committed Details | Review

Description Rui Matos 2012-09-25 18:05:38 UTC
Patch attached.
Comment 1 Rui Matos 2012-09-25 18:05:39 UTC
Created attachment 225148 [details] [review]
gnome-xkb-info: Fix introspection element-type annotations
Comment 2 Colin Walters 2012-09-25 18:39:11 UTC
Review of attachment 225148 [details] [review]:

::: libgnome-desktop/gnome-xkb-info.c
@@ +640,3 @@
  * Returns a list of all layout identifiers we know about.
  *
+ * Return value: (transfer container) (element-type gchar*): the list

"utf8" is preferred here.
Comment 3 Colin Walters 2012-09-25 18:39:54 UTC
With that change, accepted-commit-now.
Comment 4 Matthias Clasen 2012-09-25 19:30:50 UTC
Created attachment 225168 [details] [review]
like this ?
Comment 5 Colin Walters 2012-09-25 19:34:11 UTC
Review of attachment 225168 [details] [review]:

Yep.