gnome-xkb-info: Fix introspection element-type annotations

https://bugzilla.gnome.org/show_bug.cgi?id=684802